# multitask-perception

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  infer.py  pyproject.toml  test.py  train.py
.claude/memory/: MEMORY.md  config_migration_task.md  feedback_working_style.md  project_overview.md  project_status.md  reference_obsidian_docs.md  user_profile.md
configs/detection/centernet/: espnetv2_cnet512_voc0712.yaml  hardnet68_cnet512_voc0712.yaml  mobilenetv2_cnet512_voc0712.yaml  resnet18_cnet512_voc0712.yaml  vovnet39_cnet512_voc0712.yaml
configs/detection/nanodet/: hardnet68_nanodet512_lpdet.yaml  hardnet68_nanodet768_dd.yaml  mobilenet-nanodet512-ocr.yaml  vovnet39_nanodet1024_dd.yaml  vovnet39_nanodet1024_ddgold.yaml  vovnet39_nanodet384_ocr.yaml  vovnet39_nanodet512_coco128.yaml  vovnet39_nanodet512_ocr.yaml  vovnet39_nanodet768_dd.yaml  vovnet57_nanodet1024_dd.yaml
configs/detection/ssd/: mobilenet_ssd_espnetv2_ark2020.yaml  mobilenet_ssd_sinet_ark2020.yaml  mobilenet_ssd_sinet_cityscapes.yaml
configs/multitask/deeplabv3/: multitask_vovnet39_deeplabv3_coco128_512.yaml  multitask_vovnet39_deeplabv3_coco_512.yaml  multitask_vovnet39_deeplabv3_vps_1024.yaml  multitask_vovnet39_deeplabv3_vps_512.yaml
configs/multitask/espnetv2/: multitask_vovnet39_espnetv2_vps_1024.yaml
configs/segmentation/deeplabv3/: hardnet68_deeplabv3_cocoseg_512.yaml  vovnet39_deeplabv3_cocoseg_1024.yaml  vovnet39_deeplabv3_cocoseg_768.yaml  vovnet39_deeplabv3_dd_1024.yaml  vovnet39_deeplabv3_vpseg_1024.yaml  vovnet39_deeplabv3_vpseg_512.yaml
configs/segmentation/espnetv2/: hardnet68_espnetv2_cocoseg_512.yaml  hardnet68_espnetv2_vpsseg_512.yaml  vovnet39_espnetv2_cocoseg_1024.yaml  vovnet39_espnetv2_ddseg_1024.yaml  vovnet39_espnetv2_test_coco128.yaml  vovnet39_espnetv2_vpsseg_1024.yaml
exec_mode/: infer.py  test.py  train.py
scripts/: verify_env.sh
scripts/dataset_preparation/: config_segmentation.json  create_multitask_dataset_raw.py  create_segmentation_dataset.py  create_segmentation_dataset_extended.py  detections_txt2coco.py
src/: __init__.py  __version__.py
src/multitask_perception/config/: __init__.py  base_config.yaml  defaults.py  head_configs.py
src/multitask_perception/data/: __init__.py  build.py
src/multitask_perception/engine/: inference.py  (+1 more)
(+78 files in other folders)
